kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      run: proxy
  template:
    metadata:
      labels:
        run: proxy
    spec:
      containers:
      - name: proxy
        image: gcr.io/goblin-proxy-238316/proxy:0.0@sha256:33c89c15758a010b919c53ea1d85724bb0ce3fdf22c3307ea3fdbf768b889fde
        ports:
        - containerPort: 8080
        # https://github.com/kubernetes/kubernetes/issues/20555
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=goblin-services:us-central1:services-db=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
          runAsUser: 2  # non-root user
          allowPrivilegeEscalation: false
        volumeMounts:
          - name: cloudsql-instance-credentials-volume
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
      - name: cloudsql-instance-credentials-volume
        secret:
          secretName: cloudsql-instance-credentials
