kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"proxy-backendconfig"}}'
spec:
  type: NodePort
  selector:
    run: proxy
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
